--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -56,4 +56,4 @@ buildimg:
 	mcopy -i $(BUILDDIR)/$(OSNAME).img $(BUILDDIR)/font.psf ::
 
 run:
-	sudo qemu-system-x86_64 -netdev user,id=net0,hostfwd=tcp::2222-:22 -device e1000,netdev=net0 -device AC97 -drive file=$(BUILDDIR)/$(OSNAME).img -m 1G -cpu qemu64 -machine q35 -drive if=pflash,format=raw,unit=0,file="$(OVMFDIR)/ovmf_code.fd",readonly=on -drive if=pflash,format=raw,unit=1,file="$(OVMFDIR)/ovmf_vars.fd" -monitor stdio
+	sudo qemu-system-x86_64 -drive file=$(BUILDDIR)/$(OSNAME).img -netdev vmnet-bridged,id=net0,ifname=en0 -device edu -device e1000,netdev=net0 -device AC97 -m 1G -cpu qemu64 -machine q35 -drive if=pflash,format=raw,unit=0,file="$(OVMFDIR)/ovmf_code.fd",readonly=on -drive if=pflash,format=raw,unit=1,file="$(OVMFDIR)/ovmf_vars.fd",readonly=on -monitor stdio
